--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -10,14 +10,14 @@ slug: /oracles/price-oracles
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The price oracle is one of many oracles on the Helium Network. The market value of the Helium tokens
-are required on-chain as the price is needed to calculate everything from burning HNT for Data
+The Price Oracle is one of many Oracles on the Helium Network. The market value of the Helium tokens
+is required on-chain as the price is needed to calculate everything from burning HNT for Data
 Credits (DC) to treasury allocations for the Mobile and IoT networks.
 
 :::note Migrating Price Oracles
 
 On the day of the chain migration, price feeds were not available for all tokens. In this time, the
-existing Helium L1 price oracles continue to contribute market data.
+existing Helium L1 Price Oracles continued to contribute market data.
 
 Once a stable price feed is available, community-sourced price feeds can be removed in favor of
 Pyth.
@@ -30,10 +30,10 @@ Pyth.
 
 ### Who are the HNT Price Oracles?
 
-The community-sourced oracle price feeds are supplied by a group of eleven (11) oracles, composed of
-companies, organizations, and individuals. These oracles were selected at the activation of Data
+The community-sourced Oracle Price feeds are supplied by a group of eleven (11) Oracles, composed of
+companies, organizations, and individuals. These Oracles were selected at the activation of Data
 Credits on the Helium L1 blockchain and have proven to be a trusted source of data for the Helium
-Network. The oracle pool is comprised of:
+Network. The Oracle pool is comprised of:
 
 - Helium Foundation
 - Nova Labs
@@ -42,7 +42,7 @@ Network. The oracle pool is comprised of:
 The names of the individual feed contributors are kept anonymous as it's essential to prevent any
 external attempts at collusion.
 
-The current oracle prices can be viewed here:
+The current Price Oracles can be viewed here:
 
 - ~~[HNT Price Oracle](https://explorer.solana.com/address/horUtvuHQFWxPFrZ35YZUmXUZ2TSQdSXhcD4kkCVNKi/anchor-account)~~
   Handled by [Pyth HNT-USD](https://pyth.network/price-feeds/crypto-hnt-usd) as of May 11, 2023.
