--- a/docs/oracles/iot-proof-of-coverage-oracles.mdx
+++ b/docs/oracles/iot-proof-of-coverage-oracles.mdx
@@ -1,9 +1,9 @@
 ---
 id: iot-proof-of-coverage-oracles
-title: IOT Proof of Coverage Oracles
-pagination_label: IOT Proof of Coverage Oracles
-sidebar_label: IOT Proof of Coverage Oracles
-description: Helium IOT Proof of Coverage Oracles Documentation
+title: IOT Proof-of-Coverage Oracles
+pagination_label: IOT Proof-of-Coverage Oracles
+sidebar_label: IOT Proof-of-Coverage Oracles
+description: Helium IOT Proof-of-Coverage Oracles Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /oracles/iot-proof-of-coverage-oracles
 ---
