--- a/docs/oracles/mobile-proof-of-coverage-oracles.mdx
+++ b/docs/oracles/mobile-proof-of-coverage-oracles.mdx
@@ -1,9 +1,9 @@
 ---
 id: mobile-proof-of-coverage-oracles
-title: MOBILE Proof of Coverage Oracles
-pagination_label: MOBILE Proof of Coverage Oracles
-sidebar_label: MOBILE Proof of Coverage Oracles
-description: Helium MOBILE Proof of Coverage Oracles Documentation
+title: MOBILE Proof-of-Coverage Oracles
+pagination_label: MOBILE Proof-of-Coverage Oracles
+sidebar_label: MOBILE Proof-of-Coverage Oracles
+description: Helium MOBILE Proof-of-Coverage Oracles Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /oracles/mobile-proof-of-coverage-oracles
 ---
