--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -15,13 +15,13 @@ import MigrationStatus from '@site/src/theme/MigrationStatus'
 
 Following the community-driven proposal,
 [HIP70 - Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
-the Helium Network will migrate to the Solana blockchain on **April 18, 2023, 9am PST** (16:00 UTC).
+the Helium Network has successfully migrated to the Solana blockchain on **April 18, 2023, 9am PST** (16:00 UTC).
 This strategic move, voted in by the community, aims to capitalize on Solana's scalability, low
 transaction costs, and high-performance capabilities, including its fast transaction throughput and
 energy-efficient consensus mechanism.
 
 The migration to Solana offers key benefits for the Helium Network: it enables the IoT and Mobile
-networks to support even greater scale, supports more sophisticated Proof of Coverage algorithms,
+networks to support even greater scale, supports more sophisticated Proof-of-Coverage algorithms,
 and enhances the network's robustness, making it an even more robust solution for high-demand
 applications.
 
@@ -33,7 +33,7 @@ applications.
 
 Read more about the
 [Helium Improvement Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
-and the process of evaluating layer 1 blockchains on the
+and the process of evaluating Layer 1 blockchains on the
 [Helium Foundation Blog](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c).
 
 :::
