--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -45,7 +45,7 @@ Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in [HIP-52][hip-52-emmisions] and confirmed in
+The emmisions schedule was created in [HIP-52][hip-52-emmisions] and confirmed in
 [HIP-77][hip-77-emmisions] and is as follows:
 
 | Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
