--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -45,8 +45,8 @@ Year 1 for IOT started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emmisions schedule was created in [HIP-52][hip-52-emmisions] and confirmed in
-[HIP-77][hip-77-emmisions] and is as follows:
+The emisions schedule was created in [HIP-52][hip-52-emisions] and confirmed in
+[HIP-77][hip-77-emisions] and is as follows:
 
 | Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
 | ---- | ----------------- | ---------- | ---------------------------------------------- | ------------------------------------------ | ------------------------------------ | --------------- | ------------ |
@@ -65,10 +65,10 @@ The emmisions schedule was created in [HIP-52][hip-52-emmisions] and confirmed i
 [^4]: Oracles are not rewarded until additional oracle operators deploy services.
 
 [github]: https://github.com/helium
-[hip-52-emmisions]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve
+[hip-52-emisions]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve
 [hip-52]: https://github.com/helium/HIP/blob/main/0052-iot-dao.md
 [hip-70]: https://github.com/helium/HIP/blob/main/0070-scaling-helium.md
-[hip-77-emmisions]:
+[hip-77-emisions]:
   https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules
 [hip-77]: https://github.com/helium/HIP/blob/main/0077-solana-parameters.md
 [iot-mint-address]: https://explorer.solana.com/address/iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns
