--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -60,7 +60,7 @@ The emission schedule was created in [HIP-53][hip-53-emissions], updated in
 | 7    | 207.5B               | 7.5B                              | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
 
 > Full token emissions can be viewed in the MOBILE section of this document: [Token Emissions as of
-> Solana Migration][sol-emmisions]
+> Solana Migration][sol-emisions]
 
 [^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
 [^5]: Oracles are not rewarded until additional oracle operators deploy services.
@@ -81,6 +81,6 @@ The emission schedule was created in [HIP-53][hip-53-emissions], updated in
 [hip-77]: https://github.com/helium/HIP/blob/main/0077-solana-parameters.md
 [mobile-mint-addr]: https://explorer.solana.com/address/mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6
 [mobile]: /5g-on-helium
-[sol-emmisions]:
+[sol-emisions]:
   https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf
 [wallet-app]: /wallets/helium-wallet-app
