--- a/docs/oracles/rewards-oracles.mdx
+++ b/docs/oracles/rewards-oracles.mdx
@@ -108,7 +108,7 @@ flowchart LR
   end
   mobileHotspot-->|MOBILE Redemption|walletMOBILEBalance --> |Burn MOBILE for HNT|mobileTreasury
 
-  hntRewardsOracle-->|HNT emmisions|iotTreasury & mobileTreasury -->|HNT from burn transaction|walletHNTBalance
+  hntRewardsOracle-->|HNT emisions|iotTreasury & mobileTreasury -->|HNT from burn transaction|walletHNTBalance
 
   subgraph Blockchain
     solanaBlockchain-->|veHNT backing IOT|iotRewardsOracle
