--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -1,36 +1,30 @@
 ---
 id: mobile-token
 title: Helium Mobile Network Token
-pagination_label: MOBILE Token
-sidebar_label: MOBILE Token
+pagination_label: MOBILE Network Token
+sidebar_label: MOBILE Network Token
 description: Helium Mobile Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/mobile
+slug: /mobile-token
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('/img/blockchain/mobile_header.png')} />
 
-MOBILE is the protocol token of the [Helium Mobile Network](/5g-on-helium). MOBILE was introduced to
-the Helium Network through the community proposal
-[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) and is further defined in
-subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>,</sup>[^3]<sup>)</sup>.
+MOBILE is the protocol token of the [Helium Mobile Network][mobile]. MOBILE was introduced to the
+Helium Network through the community proposal [HIP-53][hip-53] and is further defined in subsequent
+HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>,</sup>[^3]<sup>)</sup>.
 
-[^1]:
-    [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
-
-[^2]:
-    [HIP-75: MOBILE PoC - Initiate Programmatic Minting](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md)
-
-[^3]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
+[^1]: [HIP-70: Scaling the Helium Network][hip-70]
+[^2]: [HIP-75: MOBILE PoC - Initiate Programmatic Minting][hip-75]
+[^3]: [HIP-77: Solana Parameters][hip-77]
 
 The MOBILE token is mined by 5G Hotspots through both data transfer proceeds as well as Proof of
 Coverage.
 
-The mint address for MOBILE is
-[`mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6`](https://explorer.solana.com/address/mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6)
-on the Solana blockchain.
+The mint address for MOBILE is [`mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6`][mobile-mint-addr] on
+the Solana blockchain.
 
 ## Redemption for HNT
 
@@ -39,9 +33,9 @@ each network within the Helium Network is allocated a pool of HNT based on the N
 Score. The redemption ratio is set algorithmically by the treasury swap contacts based on this
 Network Utility Score.
 
-The [Helium Wallet App](/wallets/helium-wallet-app) serves as the primary platform for exchanging
-MOBILE to HNT. This transaction can also be performed directly through the Solana blockchain using
-the open source tooling found in the [Helium GitHub repositories](https://github.com/helium).
+The [Helium Wallet App][wallet-app] serves as the primary platform for exchanging MOBILE to HNT.
+This transaction can also be performed directly through the Solana blockchain using the open-source
+tooling found in the [Helium GitHub repositories][github].
 
 ## Token Allocation
 
@@ -52,12 +46,8 @@ the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in
-[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#emissions-curve), updated in
-[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve)
-and confirmed in
-[HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and
-is as follows:
+The emission schedule was created in [HIP-53][hip-53-emissions], updated in
+[HIP-75][hip-75-emissions]and confirmed in [HIP-77][hip-77-emissions] and is as follows:
 
 | Year | MOBILE at Year Start | MOBILE Minted                     | Proof of Coverage <sup>(</sup>[^4]<sup>)</sup> | Hotspot Data <sup>(</sup>[^4]<sup>)</sup> | Mappers | Service Providers | Oracles <sup>(</sup>[^5]<sup>)</sup> | veHNT Stakers |
 | ---- | -------------------- | --------------------------------- | ---------------------------------------------- | ----------------------------------------- | ------- | ----------------- | ------------------------------------ | ------------- |
@@ -69,11 +59,28 @@ is as follows:
 | 6    | 200B                 | 7.5B                              | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
 | 7    | 207.5B               | 7.5B                              | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
 
-> Full token emissions can be viewed in the MOBILE section of this document:
-> [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+> Full token emissions can be viewed in the MOBILE section of this document: [Token Emissions as of
+> Solana Migration][sol-emisions]
 
 [^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
 [^5]: Oracles are not rewarded until additional oracle operators deploy services.
 [^6]:
     50B pre-mine, 60B max emitted in year one. Only 30B was emitted as no emissions occurred between
     August 2022 and Jan 31st, 2023
+
+[github]: https://github.com/helium
+[hip-53-emissions]: https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#emissions-curve
+[hip-53]: https://github.com/helium/HIP/blob/main/0053-mobile-dao.md
+[hip-70]: https://github.com/helium/HIP/blob/main/0070-scaling-helium.md
+[hip-75-emissions]:
+  https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve
+[hip-75]:
+  https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md
+[hip-77-emissions]:
+  https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules
+[hip-77]: https://github.com/helium/HIP/blob/main/0077-solana-parameters.md
+[mobile-mint-addr]: https://explorer.solana.com/address/mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6
+[mobile]: /5g-on-helium
+[sol-emisions]:
+  https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf
+[wallet-app]: /wallets/helium-wallet-app
