--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -19,11 +19,11 @@ the addition of mappers and other rewardable categories.
 A rewardable entity on the Helium Network is represented on Solana as an NFT (Non-Fungible Token).
 
 NFTs are ideal for this job as the represent ownership in a way that is easily transferrable and
-recognized by all major wallets. Open your wallet, and see all of your hotspots inside.
+recognized by all major wallets. Open your wallet and see all of your hotspots inside.
 
 ## Compression NFTs
 
-A new developmenet on the Solana Blockchain has been
+A new development on the Solana Blockchain has been
 [Compression NFTs](https://www.metaplex.com/posts/expanding-digital-assets-with-compression-for-nfts).
 
 With normal NFTs on Solana, each token is stored on chain as a distinct spl-token mint, with
@@ -33,9 +33,9 @@ account representing the ownership of the token. In total this leads to 4 accoun
 also a large usage of storage space on the blockchain.
 
 Enter: Compression NFTs. Compression NFTs use a Concurrent Merkle Tree to compress millions of NFTs
-into one 32 byte hash. Clients executing transactions on compressed NFTs are able to send a
-cryptograpic proof to the blockchain that verifies the NFT and ownership. In other words, instead of
-sending a transaction with:
+into one 32-byte hash. Clients executing transactions on compressed NFTs are able to send a
+cryptographic proof to the blockchain that verifies the NFT and ownership. In other words, instead
+of sending a transaction with:
 
 ```rust
 
@@ -71,13 +71,13 @@ pub merkle_tree: UncheckedAccount<'info>,
 
 While this can make the transaction size larger, the amount of data stored on chain is tiny. While
 this may look difficult, this is all neatly packed in the Metaplex Digital Asset API. This API runs
-on multiple RPC providers, and allows you to hit convenient functions like `get_assets_by_owner` and
+on multiple RPC providers and allows you to hit convenient functions like `get_assets_by_owner` and
 `get_asset_proof` so that you never have to worry about the underlying concurrent merkle algorithm.
 
 ## Fetching Rewardable Entities.
 
 All rewardable entities are created by the `helium-entity-manager` program. Further, they exist
-under a collection that is managed by the Maker of that entity. The easiest way to fetch all helium
+under a collection that is managed by the Maker of that entity. The easiest way to fetch all Helium
 entities for a given wallet is to filter by the `helium-entity-manager-creator`
 
 We can get this address by running
@@ -94,7 +94,7 @@ const creator = entityCreatorKey(dao)[0]
 
 This should output: `Fv5hf1Fg58htfC7YEXKNEfkpuogUUQDDTLgjGWxxv48H`
 
-Now, we can use the metaplex digital asset api to get rewardable entities my wallet
+Now, we can use the Metaplex Digital Asset API to get rewardable entities my wallet
 (`BcJzP2hEYgzjUwpHEtS6RhuqGfEJVx8Rq3MejujAAWrR`) owns:
 
 ```bash
@@ -117,7 +117,7 @@ curl --request POST \
 
 ### Hotspots and ECC Compact Keys
 
-Hotspots on the Helium network currently are uniquely identified by their ECC Compact Public Keys
+Hotspots on the Helium Network currently are uniquely identified by their ECC Compact Public Keys
 
 At onboarding time, hotspots are able to sign an onboard transaction proving physical ownership of
 the device.
@@ -169,18 +169,18 @@ const asset = await getAsset(rpcUrl, assetId)
 
 ## Onboarding Rewardable Entities
 
-The onboarding flow for an entity is general that a customer purchases the hardware from a maker,
-and then self-onboards to the network. Because all hardware are created by approved makers, the
-onboard transaction must be approved by the maker. This uses a similar flow to the legacy
+The onboarding flow for an entity is general that a customer purchases the hardware from a Maker,
+and then self-onboards to the network. Because all hardware is created by approved Makers, the
+onboard transaction must be approved by the Maker. This uses a similar flow to the legacy
 onboarding-server of the Helium blockchain.
 
-The main difference between the Solana version of Helium, and the legacy version on the helium
+The main difference between the Solana version of Helium, and the legacy version on the Helium
 chain, is that onboarding is on a per-network basis. A Hotspot can be an IOT hotspot, a MOBILE
 hotspot, or both. If the Hotspot wants to earn both MOBILE and IOT rewards, it must onboard to the
-IOT network AND the MOBILE network. It must also assert location in both.
+IOT network AND the MOBILE network. It must also assert location on both subnetworks.
 
-Similarly, makers are approved for specific subnetworks. A maker that creates IOT hotspots can not
-necessarily onboard MOBILE hotspots. Each network subdao must approve makers to issue rewardable
+Similarly, makers are approved for specific subnetworks. A maker that creates IOT hotspots cannot
+necessarily onboard MOBILE hotspots. Each network subDAO must approve makers to issue rewardable
 entities.
 
 The following test shows the full flow of onboarding a Hotspot using the onboarding server.
@@ -349,7 +349,7 @@ describe("onboarding server", () => {
 
 ## Claiming Rewards on Rewardable Entities
 
-A system of oracles keep track of the rewards owed to each Rewardable Entity. For example, in the
+A system of oracles keeps track of the rewards owed to each Rewardable Entity. For example, in the
 IOT network there are oracles that keep track of the IOT tokens earned by each Hotspot for PoC.
 
 These oracles are responsible ONLY for tracking the total lifetime rewards associated with a
@@ -359,24 +359,25 @@ the issuance or movement of tokens.
 The `lazy-distributor` program keeps track of, for each hotspot, how much of the total lifetime
 rewards have been claimed. Claiming rewards, then, consists of two steps:
 
-1. Ask oracles to update the on-chain state to reflect the latest lifetime rewards for this hotspot
+1. Ask oracles to update the on-chain state to reflect the latest lifetime rewards for this hotspot.
 2. Issue the difference between the total lifetime rewards and total claimed rewards to the hotspot
    owner.
 
-In practice, we have made it so that this can all happen in a singular transaction.
+In practice, we have made it so that this can all happen in a singular transaction for PoC rewards.
+Staking rewards will happen in transactions combining up to 4 days of rewards.
 
 ### Finding current rewards
 
 Oracles work off of a restful API that involves
 
-1. Grabbing lifetime rewards for all oracles
-2. Constructing a transaction to set the rewards, and passing the transaction to each oracle to
+1. Grabbing lifetime rewards for all oracles.
+2. Constructing a transaction to set the rewards and passing the transaction to each oracle to
    partially sign.
 3. Submitting the fully signed transaction to Solana.
 
 The SDK simplifies this process into two functions, `getCurrentRewards` and `formTransaction`.
 
-If you have interst in using the REST api, you can see the relatively simple client code
+If you have interest in using the REST api, you can see the relatively simple client code
 [here](https://github.com/helium/helium-program-library/blob/master/packages/distributor-oracle/src/client.ts)
 
 To fetch rewards across all oracles for a given asset id:
@@ -407,13 +408,12 @@ rewards.map(reward => {
 
 The claim example in this section requires a connection to an RPC node (provider) that understands
 compressed NFTs. This is an advanced feature that is not yet supported by Solana's public RPC
-servers.  
-**This example will not work unless you use an appropriate RPC provider such as
+servers. **This example will not work unless you use an appropriate RPC provider such as
 [Helius](https://www.helius.xyz/).**
 
 :::
 
-You can then get a transaction to submit to the solana blockchain using those rewards:
+You can then get a transaction to submit to the Solana blockchain using those rewards:
 
 <!-- prettier-ignore -->
 ```js
