line wrap, capitalization

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -21,20 +21,20 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ### Migration Process Steps
 
-The migration to Solana took place on April 18, 2023, beginning at 9am PST. The team held
-a 48-hour window to complete the migration. Hotspots and LoRaWAN devices continued to operate
-throughout the migration window.
+The migration to Solana took place on April 18, 2023, beginning at 9am PST. The team held a 48-hour
+window to complete the migration. Hotspots and LoRaWAN devices continued to operate throughout the
+migration window.
 
 1. The Helium blockchain officially halt.
 2. A snapshot was taken of Helium chain state.
 3. Existing $HNT and $MOBILE were mapped to Solana. Hotspots were minted as NFTs.
-4. During the Migration, PoC and Data Transfer continued to function through the off-chain
-   Oracle, rewards were claimable after the transition phase (estimated 24-48 hours) was complete.
+4. During the Migration, PoC and Data Transfer continued to function through the off-chain Oracle,
+   rewards were claimable after the transition phase (estimated 24-48 hours) was complete.
 5. Users and Exchanges can access their assets using the same private key on Solana (Solana and
    Helium blockchain use the same [ed25519 encryption](https://en.wikipedia.org/wiki/EdDSA)
    algorithm.)
-6. Programmatic Treasury has been activated in 2023 Q2, users will be able to convert
-   $MOBILE and $IOT into $HNT on chain at that time.
+6. Programmatic Treasury was activated in 2023 Q2, users will be able to convert $MOBILE and $IOT
+   into $HNT on chain at that time.
 
 ---
 
@@ -82,8 +82,8 @@ published March 20, 2023. The audit report is available from sec3 on their
 #### helium_entity_manager
 
 - Program ID: `hemjuPXBpNvggtaUnN1MwT3wrdhttKEfosTcc2P9Pg8`
-- Handles the issuance of NFTs representing entities that are rewardable on the Helium network, such as
-  hotspots and mappers.
+- Handles the issuance of NFTs representing entities that are rewardable on the Helium network, such
+  as Hotspots and mappers.
 
 #### helium_sub_daos
 
@@ -94,8 +94,8 @@ published March 20, 2023. The audit report is available from sec3 on their
 #### lazy_distributor
 
 - Program ID: `1azyuavdMyvsivtNxPoz6SucD18eDHeXzFCUPq5XU7w`
-- Allows off-chain Oracles to distribute PoC rewards to rewardable assets (such as hotspots) that are
-  represented as NFTs.
+- Allows off-chain Oracles to distribute PoC rewards to rewardable assets (such as Hotspots) that
+  are represented as NFTs.
 
 #### lazy_transactions
 
