minor edits, ref links

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -13,12 +13,11 @@ import MigrationStatus from '@site/src/theme/MigrationStatus'
 
 <MigrationStatus />
 
-Following the community-driven proposal,
-[HIP70 - Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
-the Helium Network has successfully migrated to the Solana blockchain on **April 18, 2023, 9am PST** (16:00 UTC).
-This strategic move, voted in by the community, aims to capitalize on Solana's scalability, low
-transaction costs, and high-performance capabilities, including its fast transaction throughput and
-energy-efficient consensus mechanism.
+Following the community-driven proposal, [HIP70 - Scaling the Helium Network][hip-70], the Helium
+Network was successfully migrated to the Solana blockchain on **April 18, 2023, 9am PST** (16:00
+UTC). This strategic move, voted in by the community, aims to capitalize on Solana's scalability,
+low transaction costs, and high-performance capabilities, including its fast transaction throughput
+and energy-efficient consensus mechanism.
 
 The migration to Solana offers key benefits for the Helium Network: it enables the IoT and Mobile
 networks to support even greater scale, supports more sophisticated Proof-of-Coverage algorithms,
@@ -31,9 +30,13 @@ applications.
 
 :::info Why Solana?
 
-Read more about the
-[Helium Improvement Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
-and the process of evaluating Layer 1 blockchains on the
-[Helium Foundation Blog](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c).
+Read more about the [Helium Improvement Proposal][solana-proposal] and the process of evaluating
+Layer 1 blockchains on the [Helium Foundation Blog][l1-evaluation].
 
 :::
+
+[solana-proposal]:
+  https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7
+[l1-evaluation]:
+  https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c
+[hip-70]: https://github.com/helium/HIP/blob/main/0070-scaling-helium.md
