--- a/docs/solana/migration-faq.mdx
+++ b/docs/solana/migration-faq.mdx
@@ -46,6 +46,7 @@ Here are 2 ways to do this:
 
 1. On the home screen in the Helium Wallet App, there is an orange button for swapping tokens using
    the Treasury.
+2. Using a DEX like [Jupiter](https://jup.ag) or [Orca](https://orca.so)
 
 :::warning
 
@@ -53,8 +54,6 @@ Treasuries for each Network are very low right now. However, better rates for sw
 available using other services.
 
 :::
-
-2. Using a DEX like [Jupiter](https://jup.ag) or [Orca](https://orca.so)
 
 ## Why are there so few rewards transactions?
 
@@ -97,10 +96,10 @@ You can find the explanation for the two in the Helium Docs:
 Here are 2 ways you can get your new Helium address:
 
 1. In the Helium Wallet App, Settings > Copy Address > Solana.
-2. Using another service Foundation is providing, you can go to this URL, and it will return your new
-   address.
+2. Using another service Foundation is providing, you can go to this URL, and it will return your
+   new address.
 
-   ```url
+   ```
    https://migration.web.helium.io/helium/<HNT-Wallet-Address>
    ```
 
@@ -111,7 +110,7 @@ select All and pull to refresh the page.
 
 ## Why Does My Helium Wallet App Crash When I Open It?
 
-The Helium Wallet App must be updated to version `2.0.5` or later.
+The Helium Wallet App must be updated to version `2.0.8` or later.
 
 If your device's App/Play Store is not showing an update button, check manually by clicking on the
 app inside the store to see more info, and the button should show "Update" instead of "Open".
