--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -29,9 +29,6 @@ During the Solana Migration downtime, the 24-hour period in which the state of t
 blockchain migrates to the Solana blockchain, the Helium Wallet App will present a "transitioning"
 screen and will not accept transaction requests.
 
-Once the Migration is complete, the Helium Wallet App can be relaunched and display each Wallet's
-assets and Hotspots on the Solana blockchain.
-
 ---
 
 ## Reward Distribution and Claiming
@@ -107,8 +104,8 @@ A Hotspot is not "Active" if it:
 
 :::caution Hotspots on the Denylist
 
-Any Hotspot on the Denylist at the time of the Snapshot is not eligible for the pre-mine regardless of
-meeting any other criteria.
+Any Hotspot on the Denylist at the time of the Snapshot is not eligible for the pre-mine regardless
+of meeting any other criteria.
 
 :::
 
