--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -22,15 +22,12 @@ Some important notes:
 
 All existing Helium Hotspots from all Hotspot Manufacturers will become "LoRaWAN Hotspots".
 
-At the time of the Solana Migration, all existing "5G Hotspots" on the Helium Network are _also_
-LoRaWAN Hotspots, but may not be enabled to operate as an active LoRaWAN hotspot.
+At the time of the Solana Migration, all existing "5G Hotspots" on the Helium Network were _also_
+LoRaWAN Hotspots but may not be enabled to operate as an active LoRaWAN hotspot.
 
 During the Solana Migration downtime, the 24-hour period in which the state of the Helium L1
 blockchain migrates to the Solana blockchain, the Helium Wallet App will present a "transitioning"
 screen and will not accept transaction requests.
-
-Once the Migration is complete, the Helium Wallet app can be relaunched and display each wallet's
-assets and Hotspots on the Solana blockchain.
 
 ---
 
@@ -38,10 +35,10 @@ assets and Hotspots on the Solana blockchain.
 
 All LoRaWAN Hotspots will be rewarded in the new IOT subDAO token instead of HNT.
 
-Rewards will accumulate to each Hotspot, not directly to a wallet, and must be "claimed" before they
-will be in the owning wallet.
+Rewards will accumulate to each Hotspot, not directly to a Wallet, and must be "claimed" before they
+will be in the owning Wallet.
 
-There is no limit to how frequently nor how many times a wallet can claim rewards from a Hotspot,
+There is no limit to how frequently nor how many times a Wallet can claim rewards from a Hotspot,
 keeping in mind that every claim requires a small transaction fee in SOL.
 
 :::info claiming fees
@@ -65,13 +62,13 @@ available.
 
 ---
 
-## IOT Premine
+## IOT Pre-mine
 
 As described in [HIP-52: IOT subDAO](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) the
-launch of the IoT subnetwork will include a premine of 5 billion IOT tokens to Validators and
+launch of the IoT subnetwork will include a pre-mine of 5 billion IOT tokens to Validators and
 Hotspots on the existing IoT network.
 
-The IOT Premine will reward Hotspots contributing and earning on the Network within the 30 days
+The IOT Pre-mine will reward Hotspots contributing and earning on the Network within the 30 days
 preceding the Solana Migration Snapshot.
 
 :::info What is a Snapshot?
@@ -84,7 +81,7 @@ the Solana blockchain.
 
 :::
 
-The premine allocates IOT tokens in the following proportion:
+The pre-mine allocates IOT tokens in the following proportion:
 
 - Validators: 2.5 billion tokens, distributed proportionately to the amount of HNT staked at the
   time of the Snapshot.
@@ -107,8 +104,8 @@ A Hotspot is not "Active" if it:
 
 :::caution Hotspots on the Denylist
 
-Any Hotspot on the Denylist a the time of the Snapshot is not eligible for the premine regardless of
-meeting any other critera.
+Any Hotspot on the Denylist at the time of the Snapshot is not eligible for the pre-mine regardless
+of meeting any other criteria.
 
 :::
 
@@ -117,9 +114,9 @@ meeting any other critera.
 :::warning Migration Errors
 
 A bug in the migration snapshot resulted in Data Only Hotspots not being considered nor rewarded as
-part of the IOT Premine.
+part of the IOT Pre-mine.
 
-Hotspots rewarded for `poc_witness` or `poc_challengee` activity were included in the Premine.
+Hotspots rewarded for `poc_witness` or `poc_challengee` activity were included in the pre-mine.
 
 :::
 
@@ -129,18 +126,18 @@ data within the 30 days preceding the Snapshot.
 ### 5G Hotspot Eligibility
 
 At the time of the Solana Migration, all asserted 5G Hotspots are also valid LoRaWAN Hotspots and
-will be allocated Premine Rewards under the same conditions as LoRaWAN Hotspots.
+will be allocated pre-mine rewards under the same conditions as LoRaWAN Hotspots.
 
 :::caution Unasserted 5G Hotspots.
 
-Unasserted 5G Hotspots will not be eligible for the premine as the Active criteria all require the
+Unasserted 5G Hotspots will not be eligible for the pre-mine as the Active criteria all require the
 Hotspot to have an asserted location recorded on the Helium L1 blockchain.
 
 :::
 
 ### Validator Eligibility
 
-The 2.5 billion IOT Token Premine to Validators will be distributed to all Active Validators
+The 2.5 billion IOT Token Pre-mine to Validators will be distributed to all Active Validators
 proportionately to the amount of HNT staked at the time of the Snapshot.
 
 The migration service will consider a Validator as "Active" if the Snapshot includes any heartbeat
