--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -11,8 +11,7 @@ slug: /solana/migration/validator-operator
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 For operators of Helium Validators at the time of the Solana Migration, this guide will outline the
-changes you can expect and the steps necessary to continue earning a return for your staked
-HNT.
+changes you can expect and the steps necessary to continue earning a return for your staked HNT.
 
 ## Prerequisites
 
@@ -141,8 +140,8 @@ yearly emissions change in August 2023. This emissions curve changes annually, s
 eventually receive 85% of all future HNT emissions.
 
 Previously Validator stakers had a Validator performance-based randomized chance at 6% of the daily
-distribution of HNT. Now they have a share of 6% of the 68% of the HNT distributed to subDAOs
-based on how much HNT for how long they are willing to lock up that HNT.
+distribution of HNT. Now they have a share of 6% of the 68% of the HNT distributed to subDAOs based
+on how much HNT for how long they are willing to lock up that HNT.
 
 ### What Happens to my HNT Previously Staked in a Pool?
 
