--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -10,13 +10,16 @@ slug: /hotspot-makers/become-a-maker/funding-a-maker-account
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Hotspot Makers must fund Maker wallets with enough Data Credits ("DC") and SOL to cover the onboarding fees for all Hotspots they supply to customers.
+Hotspot Makers must fund Maker wallets with enough Data Credits ("DC") and SOL to cover the
+onboarding fees for all Hotspots they supply to customers.
 
 ---
 
 ## Funding a Maker Account
 
-Funding a Maker wallet with Data Credits from HNT tokens is now performed in the Helium Wallet App. The transaction costs for onboarding and location assertion are paid in SOL to the Solana blockchain.
+Funding a Maker wallet with Data Credits from HNT tokens is now performed in the Helium Wallet App.
+The transaction costs for onboarding and location assertion are paid in SOL to the Solana
+blockchain.
 
 A current public view on the funding status of Maker wallets is available at:
 
@@ -35,7 +38,10 @@ These tokens are paid to the Solana blockchain.
 | MOBILE Hotspot onboarding <sup>(</sup>[^1]<sup>)</sup> |                             | 0.00168736 SOL                 |
 | **Total**                                              | **0.00365312 SOL**          | **0.00534048 SOL**             |
 
-[^1]: Onboarding a MOBILE Hotspot is an additional SOL fee as all current MOBILE Hotspots are also IOT Hotspots. A MOBILE-only Hotspot would not be required to pay the IOT transaction fee. The Maker App can be configured to do both, either or just one of these network onboards.
+[^1]:
+    Onboarding a MOBILE Hotspot is an additional SOL fee as all current MOBILE Hotspots are also IOT
+    Hotspots. A MOBILE-only Hotspot would not be required to pay the IOT transaction fee. The Maker
+    App can be configured to do both, either or just one of these network onboards.
 
 ### Data Credit Fees
 
@@ -53,18 +59,22 @@ These tokens are "burned".
 
 ## Funding Maker Wallets with SOL
 
-Funding a Maker wallet with SOL is performed the same way as sending tokens to any crypto wallet. Send from an exchange, another wallet, or swap from another cryptocurrency within the [Helium Wallet][helium-wallet] using the inbuilt browser and a swap aggregator such as [Jupiter][jupiter].
+Funding a Maker wallet with SOL is performed the same way as sending tokens to any crypto wallet.
+Send from an exchange, another wallet, or swap from another cryptocurrency within the [Helium
+Wallet][helium-wallet] using the inbuilt browser and a swap aggregator such as [Jupiter][jupiter].
 
 ---
 
 ## Funding Maker Wallets with Data Credits
 
-Funding a wallet with Data Credits requires HNT, as Data Credits can only be obtained using HNT. The exchange rate for DC is $1 worth of HNT = 100,000 DC.
+Funding a wallet with Data Credits requires HNT, as Data Credits can only be obtained using HNT. The
+exchange rate for DC is $1 worth of HNT = 100,000 DC.
 
 - If HNT is $2 then 0.5 HNT = 100,000 DC
 - If HNT is $10 then 0.1 HNT = 100,000 DC
 
-The USD/HNT exchange rate within the Helium Wallet App is used for the conversion and appears in the Helium Wallet app before committing the transaction.
+The USD/HNT exchange rate within the Helium Wallet App is used for the conversion and appears in the
+Helium Wallet app before committing the transaction.
 
 :::warning HNT to DC swaps are irreversible
 
@@ -84,7 +94,8 @@ Always double-check the addresses before performing essential operations.
 1. Tap the `Swap Tokens` button and confirm the swap transaction.
 1. HNT is burned for DC within the same Wallet.
 
-The new DC balance amount can be verified in the app tokens list on the `$` tab within the Helium Wallet app.
+The new DC balance amount can be verified in the app tokens list on the `$` tab within the Helium
+Wallet app.
 
 ---
 
@@ -92,9 +103,11 @@ The new DC balance amount can be verified in the app tokens list on the `$` tab 
 
 The Helium Wallet app can be used to swap HNT from one wallet to DC in a Maker wallet.
 
-This method requires that the sending Wallet is already funded with HNT to swap and SOL for transaction fees.
+This method requires that the sending Wallet is already funded with HNT to swap and SOL for
+transaction fees.
 
-Firstly add the Maker Wallet address to the Address Book as a contact. This is the destination wallet that you will send the DC to:
+Firstly add the Maker Wallet address to the Address Book as a contact. This is the destination
+wallet that you will send the DC to:
 
 1. Tap the `Address Book` icon in the top right corner of the Helium Wallet app.
 1. Add new contact with the Maker's Solana wallet address.
@@ -106,12 +119,14 @@ Firstly add the Maker Wallet address to the Address Book as a contact. This is t
 1. Tap the `Swap` icon in the middle of the screen.
 1. Select `HNT` in the top drop-down and enter an amount of HNT to swap.
 1. The lower drop-down will be filled with the resulting DC amount.
-1. **Tap the grey `Add Recipient +` text to enter the receiving Solana wallet address. This is the wallet address to send the DC to.**
+1. **Tap the grey `Add Recipient +` text to enter the receiving Solana wallet address. This is the
+   wallet address to send the DC to.**
 1. Tap the `...` to the right of Solana Address and select the contact for the Maker Wallet.
 1. Tap the `Swap Tokens` button and confirm the swap transaction.
 1. HNT is burned for DC within the same Wallet.
 
-The new DC balance amount in the recipient Maker Wallet can be verified by looking at the Helium Data Credit token balance of the maker wallet on https://explorer.solana.com/
+The new DC balance amount in the recipient Maker Wallet can be verified by looking at the Helium
+Data Credit token balance of the maker wallet on https://explorer.solana.com/
 
 [dune-makers]: https://dune.com/helium-foundation/helium-makers
 [helium-wallet]: /wallets/helium-wallet-app
