--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -130,5 +130,5 @@ Data Credit token balance of the maker wallet on https://explorer.solana.com/
 
 [dune-makers]: https://dune.com/helium-foundation/helium-makers
 [helium-wallet]: /wallets/helium-wallet-app
-[jupiter]: (https://jup.ag/swap)
+[jupiter]: https://jup.ag/swap
 [hip-69]: https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md
