header typo fix

--- a/docs/archive/helium-hotspot-app.mdx
+++ b/docs/archive/helium-hotspot-app.mdx
@@ -32,7 +32,7 @@ to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot.
 The app can be used to:
 
 - Add Nova Labs or FreedomFi Hotspot to the Helium Network
-- Set or Modify the Hospot's location
+- Set or Modify the Hotspot's location
 - Configure the Wi-Fi connection of the Hotspot
 
 ---
