--- a/docs/governance/working-groups.mdx
+++ b/docs/governance/working-groups.mdx
@@ -32,10 +32,10 @@ The IOT Proof-of-Coverage ("PoC") Working Group was created to develop guidance 
 the original PoC algorithm. The Working Group is made up of 10 volunteers and stewarded by the
 Helium Foundation. The IoT network is Helium’s original and largest sub-network. During its long
 history, it has been governed by some of the most important Helium Improvement Proposals (HIPs) ever
-published (HIP-10[hip-10], HIP-15[hip-15], HIP-17[hip-17], HIP-19[hip-19], etc). Its continued
-success depends on the Working Group's ability to incentivize LoRaWAN Hotspot deployments in a
-manner that encourages network growth and useful coverage. Helium’s IoT Proof-of-Coverage system is
-the unique engine behind it all.
+published ([HIP-10][hip-10], [HIP-15][hip-15], [HIP-17][hip-17], [HIP-19][hip-19], etc). Its
+continued success depends on the Working Group's ability to incentivize LoRaWAN Hotspot deployments
+in a manner that encourages network growth and useful coverage. Helium’s IoT Proof-of-Coverage
+system is the unique engine behind it all.
 
 The Group consists of 10 Community members that were self-nominated and voted in by the Community
 for three months. Members will meet for 30 minutes each week to work on the HIPs.
