sidebar organization, url slug shortened

--- a/docs/helium-tokens/sol.mdx
+++ b/docs/helium-tokens/sol.mdx
@@ -82,4 +82,4 @@ import { HntToFeeSol } from '@theme/HntToFeeSol'
 </figure>
 
 [wallet-app]: /wallets/helium-wallet-app
-[vehnt]: /vote-escrow/vehnt
+[vehnt]: /vehnt
