--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -19,8 +19,8 @@ changes you can expect and the steps necessary to continue earning a return for 
 
 1. Access to your validator's Wallet, either through the Helium Wallet App or a Ledger hardware
    wallet.
-1. Familiarized yourself with the new [veHNT](/vote-escrow/vehnt) governance model and the concept
-   staking to subDAOs (IOT and MOBILE).
+1. Familiarized yourself with the new [veHNT](/vehnt) governance model and the concept staking to
+   subDAOs (IOT and MOBILE).
 
 :::tip VeHNT, a New Way to Stake:
 
