--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -1,11 +1,11 @@
 ---
 id: vehnt
-title: Helium veHNT Token
-pagination_label: veHNT
+title: Helium Vote Escrow Token
+pagination_label: veHNT Position
 sidebar_label: veHNT
 description: Helium veHNT Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /vote-escrow/vehnt
+slug: /vehnt
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
